fix border color on dark mode.

--- a/css/home.css
+++ b/css/home.css
@@ -30,6 +30,7 @@ body {
   background-color: hsl(0, 0%, 98%);
   font-family: "Nunito Sans";
   color: hsl(200, 15%, 8%);
+  position: relative;
 }
 
 .dark-mode {
